# ideas_manager

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.cuda.txt  requirements.txt
configs/ingestion_worker/: Dockerfile  requirements.txt
configs/tgbot/: Dockerfile  requirements.txt
migrations/: 001_init.sql
nn_ideas_manager/: kd_main.py  main.py
nn_ideas_manager/core/: __init__.py  retrieval.py
nn_ideas_manager/core/db/: config.py  connection.py  functions.py
nn_ideas_manager/core/rag/: __init__.py  docstore.py  multirepretriever.py  retrieval.py
nn_ideas_manager/core/tgbot/: config.py
nn_ideas_manager/core/tgbot/db/: connection.py  functions.py
nn_ideas_manager/core/tgbot/handlers/: ask_handler.py  bulk_upload_handler.py  link_handler.py  start_handler.py  url_handler.py
nn_ideas_manager/core/tgbot/jobs/: process_links.py
nn_ideas_manager/core/workers/process_undigested_urls/: main.py  utils.py
tgbot/: Dockerfile
