[project]
name = "nn-ideas-manager"
version = "0.1.0"
description = "Telegram Bot for saving instagram content and storing it in LLM friendly way."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "knowledge-devourer>=1.0.5",
    "python-dotenv>=1.0",
]
