[project]
name = "nn-ideas-manager"
version = "0.1.0"
description = "Telegram Bot for saving instagram content and storing it in LLM friendly way."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "faster-whisper>=1.1.1",
    "ffmpeg-python>=0.2.0",
    "hf-xet>=1.0.3",
    "huggingface-hub>=0.30.2",
    "instaloader>=4.14.1",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.55",
    "langchain-huggingface>=0.1.2",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "opencv-python-headless>=4.11.0.86",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.3.31",
]
